Small tidyings to improve readability of code